--- a/src/site/html/home.html
+++ b/src/site/html/home.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hopper - hop device to device</title>
+    <title>Home - Hopper</title>
 </head>
 <body>
+
+<h1>HOPPER - Hop Device to Device</h1>
 
 This is a basic HTML file. The contents of the website will be added later on.
 
