--- a/src/site/html/uploadImage.html
+++ b/src/site/html/uploadImage.html
@@ -2,28 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel = "stylesheet" href="../styles/styles.css">
     <title>Upload Image</title>
+
 </head>
 <body>
     <h1>Upload your files here</h1>
 
-    <h2>Upload Images</h2>
-    <input class = "file-upload-input"
-           type = "file"
-           onchange = "readURL(this)"
-           accept = "Image/*">
+    <br>
+    <h2>Start typing here</h2>
+    <label>
+        <input type = "text"
+               placeholder = "amongus">
+    </label>
 
     <br>
     <h2>Upload basic documents here (docx, PDF)</h2>
     <input class = "file-upload-input"
            type = "file"
-           onchange = "readURL(this)"
            accept = "application/pdf, application/docx">
 
-    <br>
-    <h2>Start typing here</h2>
-    <input type = "text"
-           placeholder = "amongus">
+    <h2>Upload Images</h2>
+    <form>
+    <input class = "file-upload-input"
+           type = "file"
+           id = "image_input"
+           accept = "Image/*">
+
+    <div id = "display_image" alt="uploaded image"></div>
+
+    <script src="../scripts/uploadImage.js"></script>
+    </form>
 
 </body>
 </html>
