--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -11,16 +11,20 @@
 
     <br>
     <h2>Start typing here</h2>
-    <label>
-        <input type = "text"
-               placeholder = "amongus">
-    </label>
+    <form>
+        <label>
+            <input type = "text"
+                   placeholder = "among us">
+        </label>
+    </form>
 
     <br>
     <h2>Upload basic documents here (docx, PDF)</h2>
+    <form>
     <input class = "file-upload-input"
            type = "file"
            accept = "application/pdf, application/docx">
+    </form>
 
     <h2>Upload Images</h2>
     <form>
