addition on Navigation Bar and style changes

--- a/src/site/html/home.html
+++ b/src/site/html/home.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel = "stylesheet" href="../styles/styles.css">
     <title>Home - Hopper</title>
 </head>
+<ul class ="topnavbar">
+    <li><a class="active" href=home.html>Home</a></li>
+    <li><a href=upload.html>Upload</a></li>
+    <li><a href=about.html>About</a></li>
+</ul>
 <body>
+
 
 <h1>HOPPER - Hop Device to Device</h1>
 
