--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -7,6 +7,11 @@
 
 </head>
 <body>
+    <ul class ="topnavbar">
+        <li><a href=home.html>Home</a></li>
+        <li><a class="active" href=upload.html>Upload</a></li>
+        <li><a href=about.html>About</a></li>
+    </ul>
     <h1>Upload your files here</h1>
 
     <br>
@@ -34,9 +39,7 @@
            accept = "Image/*">
 
     <div id = "display_image" alt="uploaded image"></div>
-
     <script src="../scripts/uploadImage.js"></script>
     </form>
-
 </body>
 </html>
