Upload site fixed

--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -30,6 +30,10 @@
             margin: 0;
             }
 
+        .active[data-tab-info] {
+        display: block;
+        }
+
         .tabs span {
         background: rgb(0, 0, 255);
         padding: 10px;
@@ -57,7 +61,7 @@
     <div class="tabs">
         <span data-tab-value="#tab_1">Text only</span>
         <span data-tab-value="#tab_2">Basic Documents</span>
-        <span data-tab-value="#tab_3">Tab-3</span>
+        <span data-tab-value="#tab_3">Images</span>
         </div>
     <h1>Upload your files here</h1>
 
