--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -38,6 +38,7 @@
                 <label>
                     <input type = "text" id = "test" value="kek"> // id changed due to test
                     <input type="submit" onclick="generateKey()" value="Submit">
+                    <input type="button">
                 </label>
             </form>
         </div>
@@ -48,6 +49,7 @@
                 <input class = "file-upload-input"
                        type = "file"
                        accept = "application/pdf, application/docx">
+
             </form>
 
         </div>
