Testing out new Style, new page, and possible links

--- a/src/site/html/textDatapage.html
+++ b/src/site/html/textDatapage.html
@@ -6,7 +6,11 @@
     <title>Your Text-Hopper</title>
 </head>
 <body>
+<h4>Your Hopper Page is <script>grabAKey();</script></h4>
 
+<h1 id="textdisplaypage"></h1>
+<script src="../scripts/CommitText.js"></script>
+<script>makeApage();</script>
 
 </body>
 </html>
