Trying out some commits and datapage creation. With Console log.

--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -40,9 +40,7 @@
                 <label for="key">Create your Hopper Key!</label>
                     <input type = "text" id = "key" value="kek"> // id changed due to test
                     <input type="submit" onclick="generateKey()" value="Generate Key">
-                    <a href=textDatapage.html target="_blank" rel="noopener noreferrer">
-                        <button onclick="makeApage()">Make a Datapage</button>
-                    </a>
+                    <input type ="button" id="Pagemaker" value="Make a Hopper" onclick="makeApage()">
 
 
             </form>
