--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -38,9 +38,10 @@
             </form>
             <form>
                 <label for="key">Create your Hopper Key!</label>
-                    <input type = "text" id = "key" value="kek"> // id changed due to test
-                    <input type="submit" onclick="generateKey()" value="Generate Key">
-                    <input type ="button" id="Pagemaker" value="Make a Hopper" onclick="makeApage()">
+                    <input type = "text" id = "key" > <!-- id changed due to test-->
+                    <input type="button" onclick="generateKey()" value="Generate Key">
+                    <input type="button" onclick="saveData()" value="Save Hopper Data">
+                    <input type ="button" id="Pagemaker" value="Preview Your Hopper" onclick="makeApage()">
 
 
             </form>
