--- a/src/site/html/textDatapage.html
+++ b/src/site/html/textDatapage.html
@@ -6,11 +6,14 @@
     <title>Your Text-Hopper</title>
 </head>
 <body>
-<h4>Your Hopper Page is <script>grabAKey();</script></h4>
-
-<h1 id="textdisplaypage"></h1>
+<h4>Your Hopper Key is
+    <label>
+    <textarea id="Hopperkeyarea" onload="grabAKey()">00000000</textarea></label></h4>
+<input type ="button" id="Keybuilder" value="RevealtheKey" onclick="grabAKey()">
+<input type ="button" id="Builder" value="Reveal the Text" onclick="buildApage()">
+<h1 id="textdisplaypage" onload="buildApage()"></h1>
 <script src="../scripts/CommitText.js"></script>
-<script>makeApage();</script>
+
 
 </body>
 </html>
