--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -28,18 +28,27 @@
         <div class="tabs__tab active" id="tab_1" data-tab-info>
             <br>
             <h2>Start typing here</h2>
+
             <form>
                 <label>
+
                     <input type = "text"
+                           name = "textInput"
                            placeholder = "among us">
+
+                    <input type = "submit">
+
                 </label>
+
             </form>
+
             <form>
                 <label>
                     <input type = "text" id = "test" value="kek"> // id changed due to test
                     <input type="submit" onclick="generateKey()" value="Submit">
                 </label>
             </form>
+
         </div>
         <div class="tabs__tab" id="tab_2" data-tab-info>
             <br>
