First attempt at the Webservlet concept

--- a/src/site/html/upload.html
+++ b/src/site/html/upload.html
@@ -29,25 +29,19 @@
             <br>
             <h2>Start typing here</h2>
 
-            <form>
+            <form name="TextInputForm" method="post" action="../TextDatapage">
                 <label>
 
                     <input type = "text"
                            name = "textInput"
                            placeholder = "among us">
-
-                    <input type = "submit">
-
-                </label>
-
-            </form>
-
-            <form>
-                <label>
                     <input type = "text" id = "test" value="kek"> // id changed due to test
-                    <input type="submit" onclick="generateKey()" value="Submit">
+                    <input type = "submit" value = "Submit to Database">
+
                 </label>
+
             </form>
+
 
         </div>
         <div class="tabs__tab" id="tab_2" data-tab-info>
